# Reinvent-the-wheel

./: .gitignore  .travis.yml  CMakeLists.txt  main.cpp
cmake/: FindCatch.cmake
src/variant/: CMakeLists.txt  variant.hpp
src/variant/detail/: enable_special_method.hpp  variant_data.hpp  variant_impl.hpp  variant_storage.hpp  variant_utilities.hpp
test/variant/: CMakeLists.txt  test_variant.cpp
